Fixed testimonials wrapping.

--- a/style.css
+++ b/style.css
@@ -707,6 +707,14 @@ video {
   gap: 2rem;
 }
 
+.whitespace-normal {
+  white-space: normal;
+}
+
+.whitespace-nowrap {
+  white-space: nowrap;
+}
+
 .rounded {
   border-radius: 0.25rem;
 }
